# pkg/apitoken/handler.go
@@ -134,6 +134,11 @@ var AvailableAdminRoutes = []AvailableRoute{
 	{Method: "GET", Path: "/admin/api/federation/{id}"},
 	{Method: "PUT", Path: "/admin/api/federation/{id}"},
 	{Method: "DELETE", Path: "/admin/api/federation/{id}"},
+	{Method: "GET", Path: "/admin/api/applications"},
+	{Method: "POST", Path: "/admin/api/applications"},
+	{Method: "GET", Path: "/admin/api/applications/{id}"},
+	{Method: "PUT", Path: "/admin/api/applications/{id}"},
+	{Method: "DELETE", Path: "/admin/api/applications/{id}"},
 	{Method: "GET", Path: "/admin/api/groups"},
 	{Method: "POST", Path: "/admin/api/groups"},
 	{Method: "GET", Path: "/admin/api/groups/{id}"},
